--- a/requirements.txt
+++ b/requirements.txt
@@ -5,21 +5,22 @@ django-crispy-forms==2.1
 django-ranged-response==0.2.0
 django-simple-captcha==0.5.12
 filelock==3.12.4
+gunicorn==23.0.0
 joblib==1.3.2
 numpy==1.26.4
-pillow==11.2.1 
+packaging==25.0
+pandas==2.2.3
+pillow==11.2.1
 platformdirs==3.10.0
-pytz==2019.3
+psycopg2-binary==2.9.10
+python-dateutil==2.9.0.post0
+pytz==2025.2
 scikit-learn==1.6.1
-scipy==1.15.2 
-six==1.16.0  
+scipy==1.15.2
+six==1.16.0
 sqlparse==0.4.4
 threadpoolctl==3.2.0
 tzdata==2023.3
 virtualenv==20.24.5
+whitenoise==6.9.0
 xgboost==2.0.3
-gunicorn
-
-
-# pip install -r requirements.txt
-
